# git-agent-harness

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  OPENHANDS_TASK.md  README.md  TICKET-gah-skip-stalled-tickets.md  TICKET-human-required-scoping.md  agent-harness.txt  et  et=true  package-lock.json  package.json  scaffold.sh  tmp  tmp2  tsconfig.base.json  verify_implementation.md
.claude/: launch.json
.github/workflows/: CI.yml  frontend.yml
apps/desktop/: Cargo.toml  MOBILE_SCOPING.md  electron-builder.config.js  main.rs  package.json  tauri.conf.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
apps/desktop/icons/: icon.icns
apps/desktop/scripts/: start-electron.js
apps/desktop/src/: main.ts
apps/desktop/src-tauri/: Cargo.toml  main.rs
apps/desktop/src/main/: main.ts  preload.ts
apps/server/: HOST_REGISTRY.md  hosts.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/: index.html  package.json  playwright-ct.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
config/: gah-canonical.example.toml  gah-config.example.toml  gah-config.github.example.toml  gah-config.gitlab-self-hosted.example.toml  gah-config.gitlab.example.toml  rust-source-size-baseline.toml
docs/: AVAILABILITY_IDENTITY_MIGRATION.md  BACKEND_INSTANCE_CONFIG_MIGRATION.md  EXECUTION_IDENTITY_CONTRACT.md  LEDGER_IDENTITY_MIGRATION.md  MANAGER_MEMORY.md  OPERATIONS.md  PROJECT_BRIEF.md  ROTATION_REVOCATION.md  gah-manager-skill.md  review-usage-dogfood.md
docs/tickets/: TICKET-058-descriptive-mr-titles.md  TICKET-059-fix-strong-run-heuristic.md  TICKET-074-fix-closed-unmerged-classification.md  TICKET-088-quota-pacing-policy.md  TICKET-090-routing-observability.md  TICKET-091-durable-work-identity.md  TICKET-091-fix-heading-validation.md  TICKET-092-fix-yaml-parsing.md  TICKET-092-rebase-pr33.md  TICKET-094-rebase-pr30.md  TICKET-095-ledger-work-identity.md  (+29 more)
scripts/: dev-runner.js  generate-codex-schemas.js  install.sh
src/: availability.rs  baseline.rs  build_cache.rs  candidates.rs  capability.rs  claude_monitor.rs  config.rs  config_show.rs  context.rs  controller.rs  controller_ticket_118_test.rs  dispatch.rs  doctor.rs  events.rs  execution_identity.rs  generated_artifacts.rs  init.rs  ledger.rs  lib.rs  main.rs  models.rs  notifications.rs  policy.rs  price_guard.rs  profile_output.rs  provider.rs  prune.rs  quota.rs  quota_parser.rs  quota_snapshot.rs  quota_store.rs  redact.rs  report.rs  route_approval.rs  routing.rs  runner.rs  server.rs  status.rs  sync.rs  test_support.rs  (+9 more)
src/cli/: args.rs  (+1 more)
tests/: adversarial_correctness.rs  bounded_loop_regressions.rs  claims_profile_and_status_scope.rs  claude_monitor.rs  contracts_drift.rs  controller_refill_regressions.rs  delivery_mode_contract.rs  dependency_status_contract.rs  doctor_provider_auth.rs  execution_identity.rs  fake_backend_harness.rs  gah_cli.rs  gah_cli_validation_timeout.rs  github_observation_scope.rs  gitlab_mr_publication.rs  gitlab_provider_session.rs  issue_closure_reconciliation.rs  manual_fix_mr_dispatch.rs  policy_failover_contracts.rs  publishable_summary_contract.rs  recurring_loop_parent_death.rs  retry_cap_poisoning.rs  scenario_harness_smoke.rs  source_structure.rs  systemd_loop_contract.rs  usage_telemetry_regression.rs  utf8_safety_regression.rs
(+371 files in other folders)
