[package]
name = "git-agent-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gah"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
regex = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
