[package]
name = "git-agent-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gah"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
toml = "0.8"
fs2 = "0.4"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.20"
futures-util = "0.3"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
