[package]
name = "gah-desktop"
version = "0.1.0"
description = "Git Agent Harness Desktop App"
authors = ["Kh1ng"]
license = "MIT"
repository = "https://github.com/Kh1ng/git-agent-harness"
edition = "2021"

[[bin]]
name = "gah-desktop"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
